--- a/css/index.css
+++ b/css/index.css
@@ -1,259 +1,398 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap');
+
+:root {
+    --clr-main: #000814;
+    --clr-main-light: #003566;
+    --clr-white: #ececec;
+    --clr-gray: #e2e2e2;
+    --clr-red: #961818;
+    --clr-green: #189625;
+}
+/* #480355 */
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Rubik', sans-serif;
 }
 
-ul{
+h1, h2, h3, h4, h5, h6, p, a, input, textarea, ul {
+    margin: 0;
+    padding: 0;
+}
+
+ul {
     list-style-type: none;
 }
 
-a{
+a {
     text-decoration: none;
 }
 
-.wrapper{
+.wrapper {
     display: grid;
     grid-template-columns: 1fr 4fr;
-    background-color: #2381a6;
+    background-color: var(--clr-main);
 }
 
-aside{
-    height: 100vh;
-    padding: 1.3rem;
+aside {
+    padding: 2rem;
     padding-right: 0;
-    color: white;
+    color: var(--clr-white);
     position: sticky;
     top: 0;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
-.logo{
+.logo {
     font-weight: 400;
-    font-size: 1.5rem;
-    font-size: 0.85rem;
+    font-size: 1.3rem;
 }
 
-.menu{
+.menu {
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
+    gap: .5rem;
 }
 
-.boton-menu{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    gap: 0.5rem;
-    font-weight: 500;
+.boton-menu {
     background-color: transparent;
     border: 0;
-    color: white;
-    font-size: 1rem;
+    color: var(--clr-white);
     cursor: pointer;
-    padding: 0.5rem;
-}
-
-.boton-menu.active{
-    margin: 0;
-    background-color: white;
-    color: #061523;
-    font-weight: 700;
-    border-radius: 0 0 0 1rem;
-    position: relative;
-}
-
-.boton-carrito{
-    margin-top: 4rem;
-}
-
-.numerito{
-    background-color: white;
-    color: #061523;
-    padding: 0.15rem 0.25rem;
-    border-radius: 0.25rem;
-}
-
-.texto-footer{
-    color: #d1e2f3;
-}
-
-main{
-    background-color: white;
-    margin: 1.2rem;
-    margin-left: 0;
-    border-radius: 0.5rem;
-    padding: 1.2rem;
-}
-
-.titulo-principal{
-    color: #061523;
-    margin-bottom: 2.2rem;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    font-weight: 600;
+    padding: 1rem;
+    font-size: .85rem;
     width: 100%;
 }
 
-.contenedor-productos{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 0.8rem;
-}
-
-.producto-imagen{
-    max-width: 100%;
-    border-radius: 0.5rem 0rem 0 0;
-}
-
-.producto-detalles{
-    display: flex;
-    flex-direction: column;
-    gap: 0.15rem;
-    background-color: #2381a6;
-    color: #ddeeff;
-    padding: 0.5rem;
-    border-radius: 0rem 0rem 0.7rem 0rem;
-    margin-top: -1rem;
+.boton-menu.active {
+    background-color: var(--clr-white);
+    color: var(--clr-main);
+    border-top-left-radius: 1rem;
+    border-bottom-left-radius: 1rem;
     position: relative;
 }
 
-.producto-titulo{
+.boton-menu.active::before {
+    content: '';
+    position: absolute;
+    width: 1rem;
+    height: 2rem;
+    bottom: 100%;
+    right: 0;
+    background-color: transparent;
+    border-bottom-right-radius: .5rem;
+    box-shadow: 0 1rem 0 var(--clr-white);
+}
+
+.boton-menu.active::after {
+    content: '';
+    position: absolute;
+    width: 1rem;
+    height: 2rem;
+    top: 100%;
+    right: 0;
+    background-color: transparent;
+    border-top-right-radius: .5rem;
+    box-shadow: 0 -1rem 0 var(--clr-white);
+}
+
+.boton-carrito {
+    margin-top: 2rem;
+}
+
+.numerito {
+    background-color: var(--clr-white);
+    color: var(--clr-main);
+    padding: .10rem .15rem;
+    border-radius: .25rem;
+}
+
+.boton-carrito.active .numerito {
+    background-color: var(--clr-main);
+    color: var(--clr-white);
+}
+
+.texto-footer {
+    color: var(--clr-main-white);
+    font-size: .85rem;
+}
+
+main {
+    background-color: var(--clr-white);
+    margin: 1rem;
+    margin-left: 0;
+    border-radius: 2rem;
+    padding: 3rem;
+}
+
+.titulo-principal {
+    color: var(--clr-main);
+    margin-bottom: 2rem;
+}
+
+.contenedor-productos {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 1rem;
+}
+
+.producto-imagen {
+    max-width: 100%;
+    border-radius: 1rem;
+}
+
+.producto-detalles {
+    background-color: var(--clr-main);
+    color: var(--clr-white);
+    padding: .5rem;
+    border-radius: 1rem;
+    margin-top: -2rem;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: .25rem;
+}
+
+.producto-titulo {
     font-size: 1rem;
 }
 
-.producto-agregar{
-    color: #ddeeff;
+.producto-agregar {
     border: 0;
-    background-color: #061523;
-    padding: 0.5rem;
-    border-radius: 0.25rem;
+    background-color: var(--clr-white);
+    color: var(--clr-main);
+    padding: .4rem;
     text-transform: uppercase;
+    border-radius: 2rem;
     cursor: pointer;
-    border: 1px solid #061523;
-    transition: background-color 0.15s, color 0.15s ;
+    border: 2px solid var(--clr-white);
+    transition: background-color .2s, color .2s;
 }
 
-.producto-agregar:hover{
-    background-color: #ddeeff;
-    color: #061523;
-}
+/** CARRITO **/
 
-.color1 {color: #061523;}
-.color2 {color: #0f3247;}
-.color3 {color: #185975;}
-.color4 {color: #2381a6;}
-.color5 {color: #2bb5c8;}
-
-/* Carrito */
-
-.contenedor-carrito{
+.contenedor-carrito {
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
 }
 
-.carrito-vacio, .carrito-comprado{
-    color: #061523;
+.carrito-vacio,
+.carrito-comprado {
+    color: var(--clr-main);
 }
 
-.carrito-productos{
+.carrito-productos {
     display: flex;
     flex-direction: column;
     gap: 1rem;
 }
 
-.carrito-producto{
+.carrito-producto {
     display: flex;
-    align-items: center;
     justify-content: space-between;
-    background-color: #ddeeff;
-    color: #061523;
-    padding: 0.5rem;
-    padding-right: 2rem;
-    border-radius: 0.75rem;
+    align-items: center;
+    background-color: var(--clr-gray);
+    color: var(--clr-main);
+    padding: .45rem;
+    padding-right: 1.5rem;
+    border-radius: 0.5rem;
 }
 
-.carrito-producto-imagen{
-    width: 5rem;
+.carrito-producto-imagen {
+    width: 4rem;
+    border-radius: 0.2rem;
 }
 
-.carrito-producto-small{
-    font-size: 0.75rem;
+.carrito-producto small {
+    font-size: .75rem;
 }
 
-.carrito-producto-eliminar{
+.carrito-producto-eliminar {
     border: 0;
     background-color: transparent;
-    color: red;
-    font-size: 1rem;
+    color: var(--clr-red);
+    cursor: pointer;
 }
 
-.carrito-acciones{
+.carrito-acciones {
     display: flex;
     justify-content: space-between;
 }
 
-.carrito-acciones-vaciar{
+.carrito-acciones-vaciar {
     border: 0;
-    background-color: #ddeeff;
-    padding: 0.75rem;
-    border-radius: 0.5rem;
-    color: red;
+    background-color: var(--clr-white);
+    border: 1px solid var(--clr-red);
+    padding: 1rem;
+    border-radius: 1rem;
+    color: var(--clr-red);
     text-transform: uppercase;
     cursor: pointer;
-    font-weight: 300;
-}
-
-.carrito-acciones-derecha{
-    background-color: #ddeeff;
-    display: flex;
-    gap: 0.5rem;
-    border-radius: 0.5rem
-}
-
-.carrito-acciones-total{
-    display: flex;
-    border: 0;
-    background-color: #ddeeff;
-    padding: 0.75rem;
-    border-radius: 0.5rem;
-    color: #061523;
-    text-transform: uppercase;
-    font-weight: 600;
-}
-
-.carrito-acciones-comprar{
-    border: 0;
-    background-color: #ddeeff;
-    padding: 0.75rem;
-    border-radius: 0 0.5rem 0.5rem 0;
-    color: rgb(30, 148, 20);
-    text-transform: uppercase;
-    cursor: pointer;
-    font-weight: 700;
-}
-
-.carrito-acciones-comprar:hover{
-    color: white;
-    background-color: rgb(30, 148, 20);
-}
-
-.carrito-acciones-vaciar{
-    border: 0;
-    background-color: #ddeeff;
-    padding: 0.75rem;
-    border-radius: 0.5rem;
-    color: red;
-    text-transform: uppercase;
-    cursor: pointer;
-    font-weight: 600;
 }
 
 .carrito-acciones-vaciar:hover{
-    color: white;
-    background-color: rgb(221, 53, 53);
+    background-color: var(--clr-red);
+    color: var(--clr-white);
 }
 
-.disabled{
+.carrito-acciones-derecha {
+    display: flex;
+    border-radius: 1rem;
+    border: 1px solid var(--clr-green);
+}
+
+.carrito-acciones-total {
+    display: flex;
+    background-color: var(--clr-gray);
+    padding: 1rem;
+    color: var(--clr-main);
+    text-transform: uppercase;
+    border-radius: 1rem 0 0 1rem;
+    gap: 1rem;
+}
+
+.carrito-acciones-comprar {
+    border: 0;
+    background-color: var(--clr-white);
+    padding: 1rem;
+    color: var(--clr-green);
+    text-transform: uppercase;
+    cursor: pointer;
+    border-top-right-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+}
+
+.carrito-acciones-comprar:hover{
+    background-color: var(--clr-green);
+    color: var(--clr-white);
+    border-left: 0;
+}
+
+.header-mobile {
     display: none;
+}
+
+.close-menu {
+    display: none;
+}
+
+.disabled {
+    display: none;
+}
+
+/*** MEDIA QUERIES ***/
+
+@media screen and (max-width: 850px) {
+    .contenedor-productos {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media screen and (max-width: 675px) {
+    .contenedor-productos {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media screen and (max-width: 600px) {
+
+    .wrapper {
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+    }
+
+    aside {
+        position: fixed;
+        z-index: 9;
+        background-color: var(--clr-main);
+        left: 0;
+        box-shadow: 0 0 0 100vmax rgba(0, 0, 0, .75);
+        transform: translateX(-100%);
+        opacity: 0;
+        visibility: hidden;
+        transition: .2s;
+    }
+
+    .aside-visible {
+        transform: translateX(0);
+        opacity: 1;
+        visibility: visible;
+    }
+
+    .boton-menu.active::before,
+    .boton-menu.active::after {
+        display: none;
+    }
+
+    main {
+        margin: 1rem;
+        margin-top: 0;
+        padding: 2rem;
+    }
+
+    .contenedor-productos {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .header-mobile {
+        padding: 1rem;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .header-mobile .logo {
+        color: var(--clr-gray);
+    }
+
+    .open-menu, .close-menu {
+        background-color: transparent;
+        color: var(--clr-gray);
+        border: 0;
+        font-size: 2rem;
+        cursor: pointer;
+    }
+
+    .close-menu {
+        display: block;
+        position: absolute;
+        top: 1rem;
+        right: 1rem;
+    }
+
+    .carrito-producto {
+        gap: 1rem;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        padding: .5rem;
+    }
+
+    .carrito-producto-subtotal {
+        display: none;
+    }
+
+    .carrito-acciones {
+        flex-wrap: wrap;
+        row-gap: 1rem;
+    }
+    
+
+}
+
+
+
+@media screen and (max-width: 400px) {
+    .contenedor-productos {
+        grid-template-columns: 1fr;
+    }
 }
