--- a/css/index.css
+++ b/css/index.css
@@ -153,7 +153,7 @@ main {
     background-color: var(--clr-main);
     color: var(--clr-white);
     padding: .5rem;
-    border-radius: 1rem;
+    border-radius: 0 0 1rem 1rem;
     margin-top: -2rem;
     position: relative;
     display: flex;
